@@ -93,6 +93,8 @@ struct network {
 	struct global *global;
 	struct network_config *config;
 
+	int references;
+
 	GList *clients;
 	guint reconnect_id;
 
@@ -127,5 +129,7 @@ typedef void (*new_network_notify_fn) (struct network *, void *);
 G_MODULE_EXPORT void register_new_network_notify(struct global *, new_network_notify_fn, void *userdata);
 G_MODULE_EXPORT G_GNUC_MALLOC struct linestack_context *new_linestack(struct network *network);
 G_MODULE_EXPORT G_GNUC_MALLOC char *network_generate_feature_string(struct network *n);
+G_MODULE_EXPORT struct network *network_ref(struct network *);
+G_MODULE_EXPORT void network_unref(struct network *);
 
 #endif /* __CTRLPROXY_NETWORK_H__ */
